package oop.assignment3.ex45.base;

/*
 *  UCF COP3330 Summer 2021 Assignment2 Solution
 *  Copyright 2021 Brian Nguyen
 */

import java.io.*;
import java.util.*;
import java.util.Scanner;

public class solution45 {
    public static void main(String[] args) throws IOException {
        // read/scan the input file

        Scanner in = new Scanner(new File("exercise45_input.txt"));

        // declaring an array for storing contents of file(x = new ArrayList<String>)

        ArrayList<String> list;
        list = new ArrayList<>();

        // create a function to print to output file

        //

        /*
        try{
            output modifiedFile
        }
        catch{
            return;
        }
        */

    }

    /*  class for reading file class ReadFile
    public ReadFile() throws FileNotFoundException {

        declare array function

        pass the path to the file

        read file line and store

        in.close();

        return list:

    }
     */
    /* writing and modifying the file
     public void modify() throws IOException {
        create a for loop
        for(){
            modification goes here
            temp = temp.replaceAll();

            then write into file

        }
        close();
     }

     */
}
