@startuml
'https://plantuml.com/sequence-diagram

class solution45 {
    Word Finder

    print outputFile()

}
class readFile {
    Read Input txt

    Scanner(input.txt)
}
class modifyFile {
    Replace Function

    modify() throws IOException

}
class outputFile {
    Write to new File

    output.write()
}

solution45 <--o outputFile
readFile o--> modifyFile
modifyFile o--> outputFile
readFile o--> solution45
@enduml